manifest/app/todos-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
  namespace: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
      redis-access: "true"
  template:
    metadata:
      labels:
        app: todos-api
        redis-access: "true"
    spec:
      containers:
      - image: minhbui1/todo-api
        name: todos-api
        ports:
        - containerPort: 8082
          name: tport
      restartPolicy: Always
