manifest/app/todos-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-api
spec:
  selector:
    app: todos-api
  ports:
  - port: 8082
  type: ClusterIP
